FIX (NONE) small style fixes for images media blocks became visible when uploading content

--- a/source/_patterns/00-atoms/03-images/00-images.scss
+++ b/source/_patterns/00-atoms/03-images/00-images.scss
@@ -1,6 +1,5 @@
 img {
   max-width : 100%;
-  max-height : 100%;
   border: none;
   display : block;
 }
